--- a/contract-list-client/pom.xml
+++ b/contract-list-client/pom.xml
@@ -81,7 +81,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                com.arhibale.contractlistclient/com.arhibale.client.ContractsListApplication
+                                com.arhibale.contractlistclient/com.arhibale.client.ClientApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
